Forgot viewport at  top of page

--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
 
 <title>Michael Aboff - Portfolio</title>
-
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400&family=Roboto&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="css/colors.css">
 <link rel="stylesheet" href="css/style.css">
 <meta charset="utf-8"/>
+
 
 </head>
 <body>
