--- a/index.html
+++ b/index.html
@@ -13,13 +13,14 @@
 </head>
 <body>
 
+<div id="navbar__full_page_close" class="hidden"></div>
 <header id="header" class="flex flex__center-full">
   <div class="flex flex__center-horizontal">
   <div class="global-width flex flex__space-between">
-    <a href="index.html#" class="navbar__logo">logo</a>
-    <div class="navbar">
-      <a href="javascript:void(0)" onclick="toggleResponsiveMenu()" class="navbar__hamburger">☰</a>
-      <div class="navbar__links">
+    <a href="index.html#" id="navbar__logo">logo</a>
+    <div id="navbar">
+      <a href="javascript:void(0)" id="navbar__hamburger">☰</a>
+      <div id="navbar__link-wrapper" class="hidden-menu">
         <a href="index.html#" class="navbar__link">Home</a>
         <a href="index.html#projects" class="navbar__link">Projects</a>
         <a href="index.html#about" class="navbar__link">About</a>
@@ -210,5 +211,7 @@
   <p>© 2020 Michael Aboff.</p>
   <p>Crafted from scratch with <span class="emphasized"><3</span>.</p>
 </footer>
+
+<script src="js/navbar.js"></script>
 </body>
 </html>
