Changed "logo" to my name

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <header id="header" class="flex flex__center-full">
   <div class="flex flex__center-horizontal">
   <div class="global-width flex flex__space-between">
-    <a href="index.html#" id="navbar__logo">logo</a>
+    <a href="index.html#" id="navbar__logo">Michael Aboff</a>
     <div id="navbar">
       <a href="javascript:void(0)" id="navbar__hamburger">☰</a>
       <div id="navbar__link-wrapper" class="hidden-menu">
