--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
 
 <title>Michael Aboff - Portfolio</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta charset="utf-8"/>
+
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400&family=Roboto&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="css/colors.css">
 <link rel="stylesheet" href="css/style.css">
-<meta charset="utf-8"/>
 
 
 </head>
@@ -33,8 +34,8 @@
 </header>
 
 <section id="home" class="section flex flex__center-full flex__column">
-  <div class="hero__bkg-overlay"></div>
-  <div class="global-width">
+  <div class="hero__bkg-overlay z-idx-5"></div>
+  <div class="global-width z-idx-10">
     <div class="info-text">
       <div class="hero__title">
         <h1 class="h1 emphasized">Customer Oriented</h1>
@@ -80,9 +81,9 @@
         
         </div>
         <div class="btn-group">
-          <a href="javascript:void(0)" class="btn btn__primary btn__big" target="_blank"><span>Case Study</span></a>
-          <a href="javascript:void(0)" class="btn btn__big" target="_blank">Live Site</a>
-          <a href="javascript:void(0)" class="btn btn__big" target="_blank">View Code</a>
+          <a href="projects/portfolio.html" class="btn btn__primary btn__big" target="_blank"><span>Case Study</span></a>
+          <a href="https://mwaboff.github.io/portfolio-redux/" class="btn btn__big" target="_blank">Live Site</a>
+          <a href="https://github.com/mwaboff/portfolio-redux" class="btn btn__big" target="_blank">View Code</a>
         </div>
       </div>
     </div>
@@ -94,12 +95,12 @@
       <div class="project-info flex flex__center-vertical">
         <h2 class="h2 project-title">Recipe Sharing Site</h2>
         <div class="project-stack">PHP, MySQL, Javascript, CSS3, HTML5</div>
-        <div class="project-desc">Following my passion for cooking, I wanted to have a place I could share my favorite recipes shared to me by my grandmother. I built my own Laravel-like, custom PHP framework to handle the backend, as well as several APIs to manage the database and image manipulation.</div>
+        <div class="project-desc">To get a better understanding of backend MVC frameworks, I designed and built my own from scratch. I also developed and implemented custom APIs to manage the database and image manipulation.</div>
         <div class="project-tldr">
           <div class="project-tldr__title">Notable Points</div>
           <ul class="project-tldr__list">
-            <li>Built a new PHP Framework</li>
-            <li>Created a custom DB interface</li>
+            <li>Built an MVC framework</li>
+            <li>Created a DB interface</li>
             <li>Wrote an Image API</li>
             <li>Responsive</li>
           </ul>
