Added mockups, case study for portfolio page

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
     <div class="project-tile">
       <div class="project-image flex flex__center-full">
-        <img src="https://picsum.photos/400/350"></img>
+        <img src="./media/projects/portfolio/portfolio_on_desk_mockup.png" alt="">
       </div>
       
       <div class="project-info flex flex__center-vertical">
@@ -90,7 +90,7 @@
 
     <div class="project-tile">
       <div class="project-image flex flex__center-full">
-        <img src="https://picsum.photos/400/400"></img>
+        <img src="./media/projects/portfolio/portfolio_transparent_bkg.png" alt="">
       </div>
       <div class="project-info flex flex__center-vertical">
         <h2 class="h2 project-title">Recipe Sharing Site</h2>
