--- a/projects/portfolio.html
+++ b/projects/portfolio.html
@@ -57,7 +57,7 @@
         </div>
         <div class="btn-group">
           <a href="https://mwaboff.github.io/portfolio-redux/" class="btn btn__primary btn__dark-text btn__big" target="_blank"><span>Live Site</span></a>
-          <a href="https://github.com/mwaboff/portfolio-redux" class="btn btn__big" target="_blank">View Code</a>
+          <a href="https://github.com/mwaboff/portfolio-redux" class="btn btn__big btn__dark-hover" target="_blank">View Code</a>
         </div>
     </div>
       
