Added more mockups, some CSS for pre and blockquote tags

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
           <div class="project-tldr__title">Notable Points</div>
           <ul class="project-tldr__list">
             <li>Responsive, mobile-first</li>
-            <li>No dependencies</li>
+            <li>No template</li>
             <li>Wireframe with Balsamiq</li>
             <li>Mock up with Figma</li>
           </ul>
@@ -140,7 +140,7 @@
 
     <div class="project-tile">
       <div class="project-image flex flex__center-full">
-        <img src="https://picsum.photos/400/400"></img>
+        <img src="./media/projects/hfes/hfes_fake_mockup.png"></img>
       </div>
       
       <div class="project-info flex flex__center-vertical">
@@ -156,7 +156,7 @@
         </div>
         <div class="btn-group">
           <a href="javascript:void(0)" class="btn btn__primary btn__big" target="_blank"><span>Case Study</span></a>
-          <a href="javascript:void(0)" class="btn btn__big" target="_blank">View Code</a>
+          <a href="https://github.com/mwaboff/HF-Enhancement-Suite" class="btn btn__big" target="_blank">View Code</a>
         </div>
       </div>
     </div>
