tweaked css  to better handle tablet size responsiveness

--- a/projects/boffs-better-bakery.html
+++ b/projects/boffs-better-bakery.html
@@ -39,7 +39,7 @@
     <div class="info-text">
       <div class="hero__title">
         <!-- <h1 class="h1 emphasized">Portfolio</h1> -->
-        <h1 class="h1"> <span class="emphasized">Recipe Sharing Site</span> - Case Study</h1>
+        <h1 class="h1"> <span class="emphasized">Recipe Sharing Site</span> <span class="inline-block">Case Study</span></h1>
         <div class="project-title-wrap">
           <div class="">PHP, MySQL, Javscript, CSS3, HTML5</div>
         </div>
