Added HFES case study

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
           </ul>
         </div>
         <div class="btn-group">
-          <a href="javascript:void(0)" class="btn btn__primary btn__big" target="_blank"><span>Case Study</span></a>
+          <a href="projects/hfes.html" class="btn btn__primary btn__big" target="_blank"><span>Case Study</span></a>
           <a href="https://github.com/mwaboff/HF-Enhancement-Suite" class="btn btn__big" target="_blank">View Code</a>
         </div>
       </div>
@@ -155,9 +155,9 @@
         
         </div>
         <div class="btn-group">
-          <a href="javascript:void(0)" class="btn btn__primary btn__big" target="_blank"><span>Case Study</span></a>
-          <a href="javascript:void(0)" class="btn btn__big" target="_blank">Live Site</a>
-          <a href="javascript:void(0)" class="btn btn__big" target="_blank">View Code</a>
+          <!-- <a href="javascript:void(0)" class="btn btn__primary btn__big" target="_blank"><span>Case Study</span></a> -->
+          <a href="http://boff.io" class="btn btn__primary btn__big" target="_blank">Live Site</a>
+          <a href="https://github.com/mwaboff/Kihub/tree/master/urlshortener" class="btn btn__big" target="_blank">View Code</a>
         </div>
       </div>
     </div>
