--- a/projects/boffs-better-bakery.html
+++ b/projects/boffs-better-bakery.html
@@ -39,7 +39,7 @@
     <div class="info-text">
       <div class="hero__title">
         <!-- <h1 class="h1 emphasized">Portfolio</h1> -->
-        <h1 class="h1"> <span class="emphasized">Recipe Sharing Site</span> <span class="inline-block">Case Study</span></h1>
+        <h1 class="h1"> <span class="emphasized">Recipe Sharing Site</span> <span class="inline-block">- Case Study</span></h1>
         <div class="project-title-wrap">
           <div class="">PHP, MySQL, Javscript, CSS3, HTML5</div>
         </div>
@@ -143,7 +143,7 @@ function getScaledResource($percentage) {
     <p>This interface would manage all of the interactions with the database. It made the initial connection to the DB, would format the queries, and send it along. I opted to use PDO as the database manager for this tool.</p>
     <p>In order to keep things as simple as possible, the DBManager would create a new instance of itself, generate a connection to the database, submit the query, and return the result. This method ended up being the most convenient pattern used across the site.</p>
     
-    <h3 class="h3 case-study__section-title">Takeaways</h3>
+    <h3 class="h3 case-study__section-title">Takeaway</h3>
     <p>Developing the entire framework from scratch was a bit task to chew. I learned a lot doing it, and I would recommend others give it a try themselves. However, if you are trying to create a production ready environment, just use a well known and vetted framework!</p>
     
 
