--- a/projects/portfolio.html
+++ b/projects/portfolio.html
@@ -39,7 +39,7 @@
     <div class="info-text">
       <div class="hero__title">
         <!-- <h1 class="h1 emphasized">Portfolio</h1> -->
-        <h1 class="h1"> <span class="emphasized">Porfolio</span> - Case Study</h1>
+        <h1 class="h1"> <span class="emphasized">Porfolio</span> <span>- Case Study</span></h1>
         <div class="project-title-wrap">
           <div class="">Javascript, CSS3, HTML5, Figma</div>
         </div>
@@ -172,7 +172,7 @@
   --background-color-2: #505050;
 }</pre>
 
-    <h3 class="h3 case-study__section-title">Takeaways</h3>
+    <h3 class="h3 case-study__section-title">Takeaway</h3>
     <ol>
       <li>Always start front-end design with a wireframe and mockup.</li>
       <li>Flex boxes and CSS variables are life savers.</li>
