--- a/projects/portfolio.html
+++ b/projects/portfolio.html
@@ -15,7 +15,7 @@
 <body>
 
 <div id="navbar__full_page_close" class="hidden"></div>
-<header id="header" class="flex flex__center-full">
+<header id="header" class="flex flex__center-full navbar__clear-background">
   <div class="flex flex__center-horizontal">
   <div class="global-width flex flex__space-between">
     <a href="../index.html#" id="navbar__logo">Michael Aboff</a>
