--- a/projects/portfolio.html
+++ b/projects/portfolio.html
@@ -38,8 +38,7 @@
   <div class="global-width  z-idx-10">
     <div class="info-text">
       <div class="hero__title">
-        <!-- <h1 class="h1 emphasized">Portfolio</h1> -->
-        <h1 class="h1"> <span class="emphasized">Porfolio</span> <span>- Case Study</span></h1>
+        <h1 class="h1"> <span class="emphasized">Porfolio</span> <span class="inline-block">- Case Study</span></h1>
         <div class="project-title-wrap">
           <div class="">Javascript, CSS3, HTML5, Figma</div>
         </div>
