updating boffs better bakery name

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <img src="./media/projects/recipe-sharing/boffbakery_transparent_bkg_mockup.png" alt="">
       </div>
       <div class="project-info flex flex__center-vertical">
-        <h2 class="h2 project-title">Recipe Sharing Site</h2>
+        <h2 class="h2 project-title">Better Baking - Recipe Sharing</h2>
         <div class="project-stack">PHP, MySQL, Javascript, CSS3, HTML5</div>
         <div class="project-desc">To get a better understanding of backend MVC frameworks, I designed and built my own from scratch. I also developed and implemented custom APIs to manage the database and image manipulation.</div>
         <div class="project-tldr">
