started working on adding monkeyscripts and reconfiguring boff recipe website descriptions

--- a/index.html
+++ b/index.html
@@ -62,12 +62,37 @@
 
     <div class="project-tile">
       <div class="project-image flex flex__center-full">
+        <img src="./media/projects/monkeyscripts/monkeyscripts_multi_comp_mockup.png" alt="">
+      </div>
+      <div class="project-info flex flex__center-vertical">
+        <h2 class="h2 project-title">MonkeyScripts.org</h2>
+        <div class="project-stack">PHP, Laravel, Javascript, React.js, MySQL, HTML5, CSS3, Bootstrap</div>
+        <div class="project-desc">For my Master's Thesis, I wanted to prove the feasibility implementing modern recommendation systems and adult learning techniques to improve user aquisition and retention among niche internet communities. MonkeyScripts is the culmination of this effort.</div>
+        <div class="project-tldr">
+          <div class="project-tldr__title">Notable Points</div>
+          <ul class="project-tldr__list">
+            <li>Recommendation System</li>
+            <li>Modern education techniques</li>
+            <li>Responsive design from scratch</li>
+            <li>82-page Master's Thesis</li>
+          </ul>
+        </div>
+        <div class="btn-group">
+          <a href="https://monkeyscripts.org" class="btn btn__primary btn__big" target="_blank"><span>Live Site</span></a>
+          <a href="projects/monkeyscripts.html" class="btn btn__big" target="_blank"><span>Case Study</span></a>
+          <a href="https://github.com/mwaboff/monkeyscripts" class="btn btn__big" target="_blank">View Code</a>
+        </div>
+      </div>
+    </div>
+
+    <div class="project-tile">
+      <div class="project-image flex flex__center-full">
         <img src="./media/projects/recipe-sharing/boffbakery_transparent_bkg_mockup.png" alt="">
       </div>
       <div class="project-info flex flex__center-vertical">
-        <h2 class="h2 project-title">Better Baking - Recipe Sharing</h2>
+        <h2 class="h2 project-title">BoffMVC - PHP MVC Framework</h2>
         <div class="project-stack">PHP, MySQL, Javascript, CSS3, HTML5</div>
-        <div class="project-desc">To get a better understanding of backend MVC frameworks, I designed and built my own from scratch. I also developed and implemented custom APIs to manage the database and image manipulation.</div>
+        <div class="project-desc">To get a better understanding of backend MVC frameworks, I designed and built my own from scratch. Implemented via a recipe sharing site. I also developed and implemented custom APIs to manage the database and image manipulation.</div>
         <div class="project-tldr">
           <div class="project-tldr__title">Notable Points</div>
           <ul class="project-tldr__list">
@@ -156,8 +181,8 @@
         </div>
         <div class="btn-group">
           <!-- <a href="javascript:void(0)" class="btn btn__primary btn__big" target="_blank"><span>Case Study</span></a> -->
-          <a href="http://boff.io" class="btn btn__primary btn__big" target="_blank">Live Site</a>
-          <a href="https://github.com/mwaboff/Kihub/tree/master/urlshortener" class="btn btn__big" target="_blank">View Code</a>
+          <!-- <a href="http://boff.io" class="btn btn__primary btn__big" target="_blank">Live Site</a> -->
+          <a href="https://github.com/mwaboff/Kihub/tree/master/urlshortener" class="btn btn__primary btn__big" target="_blank">View Code</a>
         </div>
       </div>
     </div>
