added more to the monkeyscripts case study

--- a/projects/monkeyscripts.html
+++ b/projects/monkeyscripts.html
@@ -93,14 +93,14 @@
       <li>Use rewards as motivation.</li>
       <li>Accommodate the three different learning styles: visual, auditory, and kinesthetic.</li>
     </ul>
-    <p>To teach users, I created a tutorial that accommodated each of these above steps. First I broke instructions down to 2 steps: 1) Installing the tool needed for user scripts to work; 2) finding and installing scripts. For the first, the instructions for installing the script are </p>
+    <p>To teach users, I created a tutorial that accommodated each of these above steps. First I broke instructions down to 2 steps: 1) Installing the tool needed for user scripts to work; 2) finding and installing scripts. For the first, the instructions for installing the script are provided to the user in the form of a video, as well as written. For the second, I developed a test user script that will immediately provide positive feedback as soon as it's installed. These two easy steps provide a modern method of teaching users how to find and use user scripts compared to the wall-of-text solutions from previous </p>
     <div class="case-study__images">
       <img src="../media/projects/monkeyscripts/monkeyscripts_tutorial_pic.png" alt="">
     </div>
     <p>Check out the <a href="https://monkeyscripts.org/tutorial" target="_blank">live tutorial here</a>.</p>
 
     <h3 class="h3 case-study__section-title">User Retention - Recommendation System</h3>
-    <p>Previous repository websites </p>
+    <p>Other user script hosting sites only provide a few simple methods of discovering new scripts: search, a top download list, and a list sorted by top raiting. As their collection of scripts grew really large, it would result in it being difficult to find any script that matters to the user. To fight this I looked to </p>
 
 
 
