removed unnecessary _blank targets for links that just link locally

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         </div>
         <div class="btn-group">
           <a href="https://monkeyscripts.org" class="btn btn__primary btn__big" target="_blank"><span>Live Site</span></a>
-          <a href="projects/monkeyscripts.html" class="btn btn__big" target="_blank"><span>Case Study</span></a>
+          <a href="projects/monkeyscripts.html" class="btn btn__big"><span>Case Study</span></a>
           <a href="https://github.com/mwaboff/monkeyscripts" class="btn btn__big" target="_blank">View Code</a>
         </div>
       </div>
@@ -104,7 +104,7 @@
         
         </div>
         <div class="btn-group">
-          <a href="projects/boffs-better-bakery.html" class="btn btn__primary btn__big" target="_blank"><span>Case Study</span></a>
+          <a href="projects/boffs-better-bakery.html" class="btn btn__primary btn__big"><span>Case Study</span></a>
           <a href="https://github.com/mwaboff/boff-bakery-recipes" class="btn btn__big" target="_blank">View Code</a>
         </div>
       </div>
@@ -132,8 +132,8 @@
         
         </div>
         <div class="btn-group">
-          <a href="projects/portfolio.html" class="btn btn__primary btn__big" target="_blank"><span>Case Study</span></a>
-          <a href="https://mwaboff.github.io/portfolio-redux/" class="btn btn__big" target="_blank">Live Site</a>
+          <a href="projects/portfolio.html" class="btn btn__primary btn__big"><span>Case Study</span></a>
+          <a href="https://mwaboff.github.io/portfolio-redux/" class="btn btn__big">Live Site</a>
           <a href="https://github.com/mwaboff/portfolio-redux" class="btn btn__big" target="_blank">View Code</a>
         </div>
       </div>
@@ -156,7 +156,7 @@
           </ul>
         </div>
         <div class="btn-group">
-          <a href="projects/hfes.html" class="btn btn__primary btn__big" target="_blank"><span>Case Study</span></a>
+          <a href="projects/hfes.html" class="btn btn__primary btn__big"><span>Case Study</span></a>
           <a href="https://github.com/mwaboff/HF-Enhancement-Suite" class="btn btn__big" target="_blank">View Code</a>
         </div>
       </div>
