--- a/projects/portfolio.html
+++ b/projects/portfolio.html
@@ -55,7 +55,7 @@
           </ul>
         </div>
         <div class="btn-group">
-          <a href="https://mwaboff.github.io/portfolio-redux/" class="btn btn__primary btn__dark-text btn__big" target="_blank"><span>Live Site</span></a>
+          <a href="https://mwaboff.github.io/portfolio-redux/" class="btn btn__primary btn__dark-text btn__big"><span>Live Site</span></a>
           <a href="https://github.com/mwaboff/portfolio-redux" class="btn btn__big btn__dark-hover" target="_blank">View Code</a>
         </div>
     </div>
@@ -179,7 +179,7 @@
     
     <img class="case-study-image" src="../media/projects/portfolio/portfolio_on_desk_mockup_large.png" alt="">
     <div class="btn-group flex flex__center-full">
-      <a href="https://mwaboff.github.io/portfolio-redux/" class="btn btn__primary btn__dark-text btn__big" target="_blank"><span>Live Site</span></a>
+      <a href="https://mwaboff.github.io/portfolio-redux/" class="btn btn__primary btn__dark-text btn__big"><span>Live Site</span></a>
       <a href="https://github.com/mwaboff/portfolio-redux" class="btn btn__big" target="_blank">View Code</a>
     </div>
 
