--- a/index.html
+++ b/index.html
@@ -133,8 +133,8 @@
         </div>
         <div class="btn-group">
           <a href="projects/portfolio.html" class="btn btn__primary btn__big"><span>Case Study</span></a>
-          <a href="https://mwaboff.github.io/portfolio-redux/" class="btn btn__big">Live Site</a>
-          <a href="https://github.com/mwaboff/portfolio-redux" class="btn btn__big" target="_blank">View Code</a>
+          <a href="index.html#" class="btn btn__big">Live Site</a>
+          <a href="https://github.com/mwaboff/portfolio" class="btn btn__big" target="_blank">View Code</a>
         </div>
       </div>
     </div>
