Improved hero section tagline. Was made to say 'Julia is always right'

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <h1 class="h1">Senior Support Engineer</h1>
       </div>
       <div class="hero__tagline">
-        My name's Michael and I don't just build things, <span class="emphasized">I craft experiences</span>.
+        My name's Michael and I distill complicated problems into <span class="emphasized">simple solutions</span>.
       </div>
       <div class="btn-group">
         <a href="#projects" class="btn btn__primary btn__dark-text btn__big">Projects</a>
