--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
 <link rel="stylesheet" href="css/colors.css">
 <link rel="stylesheet" href="css/style.css">
 
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-KLM5SJJ1ER"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-KLM5SJJ1ER');
+</script>
+
 
 </head>
 <body>
