--- a/projects/monkeyscripts.html
+++ b/projects/monkeyscripts.html
@@ -11,6 +11,16 @@
 <link rel="stylesheet" href="../css/style.css">
 <link rel="stylesheet" href="../css/case_study.css">
 
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-KLM5SJJ1ER"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-KLM5SJJ1ER');
+</script>
+
 </head>
 <body>
 
