Added mockups for boffmvc and hfes. Slight wording changes on index page

--- a/index.html
+++ b/index.html
@@ -158,12 +158,12 @@
       <div class="project-info flex flex__center-vertical">
         <h2 class="h2 project-title">HackForums Enhancement Suite (HFES)</h2>
         <div class="project-stack">Javascript</div>
-        <div class="project-desc">HFES is a cross-browser extension, adding over 20 customer requested features to the popular Hack Forums website. By building up an enthusiastic community of over 5000 users, this project generated over $4000 in sales of cosmetic badges.</div>
+        <div class="project-desc">HFES is a cross-browser extension, adding over 20 customer requested features to the popular Hack Forums website. By building up an enthusiastic community of over 5,000 users, this project generated over $4,000 in sales of cosmetic badges.</div>
         <div class="project-tldr">
           <div class="project-tldr__title">Notable Points</div>
           <ul class="project-tldr__list">
-            <li>Over 5000 users</li>
-            <li>Made over $4000</li>
+            <li>Over 5,000 users</li>
+            <li>Generated over $4,000 revenue</li>
           </ul>
         </div>
         <div class="btn-group">
