Modified the social media links to better fit with the form

--- a/index.html
+++ b/index.html
@@ -252,14 +252,19 @@
       <button class= "btn btn__primary btn__dark-text btn__big" type="submit">Send Email</button>
 
     </form>
+
+    <div class="contact-info">
+      Connect with me on social media as well with the below links.
+    </div>
+  
+    <div class="btn-group contact_buttons">
+      <a href="https://www.linkedin.com/in/mwaboff/" class="btn btn__big" target="_blank">LinkedIn</a>
+      <a href="https://github.com/mwaboff" class="btn btn__big" target="_blank">Github</a>
+    </div>
+  
   
   </div>
 </div>
-
-  <div class="btn-group">
-    <a href="mailto:mwaboff@gmail.com" class="btn btn__primary btn__dark-text btn__big" target="_blank">Email</a>
-    <a href="https://www.linkedin.com/in/mwaboff/" class="btn btn__big" target="_blank">LinkedIn</a>
-    <a href="https://github.com/mwaboff" class="btn btn__big" target="_blank">Github</a>
 
   
 </section>
