Added MS degree mention to about me section

--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
   <div class="global-width">
     <h1 class="h1 section-title">About Me</h1>
     <div class="about-info">
-      <p>An expert at taking complex technical issues and breaking them down into <span class="emphasized">simple and concise solutions</span>, I have worked with programming and information technology since 2009. I am experienced with leadership and team building. When not working, I spend my time as a baker, chocolatier, flutist, moderator, and a gamer.</p>
+      <p>An expert at taking complex technical issues and breaking them down into <span class="emphasized">simple and concise solutions</span>, I have worked with programming and information technology since 2009. I have a M.S. in Information Systems and Technology with a concentration in web design and development. When not working, I spend my time as a baker, chocolatier, flutist, moderator, and a gamer.</p>
     </div>
   </div>
 </section>
