Added a name field to the contact form

--- a/index.html
+++ b/index.html
@@ -245,6 +245,8 @@
       Send me a ping, I'm excited to see what we can accomplish together!
     </div>
     <form class="contact-form" action="https://formspree.io/f/maylvwyy" method="POST" >
+      <label for="name">Your Name:</label>
+      <input type="text" name="name" required>
       <label for="_replyto">Your Email:</label>
       <input type="email" name="_replyto" required>
       <label for="message">Your Message:</label>
