Updated tagline to remove explicit support engineer role mention

--- a/index.html
+++ b/index.html
@@ -48,12 +48,13 @@
   <div class="global-width z-idx-10">
     <div class="info-text">
       <div class="hero__title">
-        <h1 class="h1 emphasized">Customer Oriented</h1>
-        <h1 class="h1">Full-Stack Developer</h1>
-        <h1 class="h1">Senior Support Engineer</h1>
+        <!-- <h1 class="h1"><span class="emphasized">Customer Oriented</span> Software Engineer</h1> -->
+        <h1 class="h1 emphasized">Customer Focused</h1>
+        <h1 class="h1">Software Engineer</h1>
+        <!-- <h1 class="h1">Senior Support Engineer</h1> -->
       </div>
       <div class="hero__tagline">
-        I distill complicated problems into <span class="emphasized">simple solutions</span>.
+        An expert at <span class="emphasized">technical communication</span> and distilling complicated problems into <span class="emphasized">simple solutions</span>.
       </div>
       <div class="btn-group">
         <a href="#projects" class="btn btn__primary btn__dark-text btn__big">Projects</a>
