--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
 </section>
 
 <footer id="footer" class="section flex flex__center-full flex__column">
-  <p>© 2020 Michael Aboff.</p>
+  <p>© 2020-2022 Michael Aboff.</p>
   <p>Crafted from scratch with <span class="emphasized"><3</span>.</p>
 </footer>
 
